Fix the z-index of the commitment form

--- a/src/flavors/memphisv2/static/css/custom.css
+++ b/src/flavors/memphisv2/static/css/custom.css
@@ -453,6 +453,7 @@ button.star.is-full:disabled {
   bottom: auto;
   left: auto;
   min-width: 16.75em;
+  z-index: 1;
 }
 .user-commitment-form p {
   margin-bottom: 0.5em;
